--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -155,6 +155,15 @@ jobs:
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     steps:
+      - name: Show GitHub context (for debugging)
+        run: |
+          echo "REF: ${{ github.ref }}"
+          echo "SHA: ${{ github.sha }}"
+          echo "ACTOR: ${{ github.actor }}"
+          echo "EVENT_NAME: ${{ github.event_name }}"
+          echo "WORKSPACE: ${{ github.workspace }}"
+          echo "REPOSITORY: ${{ github.repository }}"
+
       - uses: actions/checkout@v4
 
       - uses: actions/download-artifact@v4
@@ -163,10 +172,17 @@ jobs:
           pattern: wheels-*
           merge-multiple: true
 
+      - name: Show downloaded artifacts
+        run: |
+          echo "=== dist 目录结构 ==="
+          ls -R dist || true
+
       - name: Collect all .whl files to final_dist
         run: |
           mkdir -p final_dist
           find dist -type f -name "*.whl" -exec mv {} final_dist/ \;
+          echo "=== final_dist 内容 ==="
+          ls -lh final_dist
 
       - name: Check wheels with twine
         run: |
