--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,4 +27,4 @@ version = "0.11"
 features = [ "json", "brotli", "gzip", "deflate", "stream",]
 
 [package.metadata.maturin]
-supported-python-versions = [ "3.9", "3.10", "3.11", "3.12", "3.13", "3.14",]
+supported-python-versions = [ "3.9", "3.10", "3.11", "3.12", "3.13"]
