--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ once_cell = "1.18"
 
 [dependencies.pyo3]
 version = "0.20"
-features = [ "extension-module",]
+features = [ "extension-module", "abi3-py37",]
 
 [dependencies.pyo3-asyncio]
 version = "0.20"
