--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,10 +25,11 @@ jobs:
         shell: bash
         run: |
           source $HOME/.cargo/env
-          PYTHON_TAG="cp${ {matrix.python-version}/./}-cp${ {matrix.python-version}/./}"
+          PYTHON_TAG="cp${{ matrix.python-version/./ }}-cp${{ matrix.python-version/./ }}"
           PYTHON_BIN=$(find /opt/python/${PYTHON_TAG}*/bin -type d | head -1)
-          ${PYTHON_BIN}/pip install maturin==1.9.2
-          ${PYTHON_BIN}/maturin build --release --manylinux 2_28 --interpreter ${PYTHON_BIN}/python
+          ${PYTHON_BIN}/pip install "maturin>=1.5,<2.0"
+          # 输出到指定目录
+          ${PYTHON_BIN}/maturin build --release --manylinux 2_28 --interpreter ${PYTHON_BIN}/python --out target/wheels
       - uses: actions/upload-artifact@v4
         with:
           name: wheels-linux-py${{ matrix.python-version }}
@@ -51,11 +52,13 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install tools
-        run: pip install maturin==1.9.2 delocate
+        run: pip install "maturin>=1.5,<2.0" delocate
+
+      # [修复] 移除 --universal2 标志，因为在新版 maturin 中已是默认行为
       - name: Build universal wheel
         run: |
-          mkdir -p target/wheels
-          maturin build --release --universal2 --interpreter python
+          maturin build --release --interpreter python --out target/wheels
+
       - uses: actions/upload-artifact@v4
         with:
           name: wheels-macos-py${{ matrix.python-version }}
@@ -72,29 +75,30 @@ jobs:
         with:
           toolchain: stable
           override: true
-      - name: Clean workspace # 这个步骤可以保留，用于清理旧的构建产物
+      - name: Clean workspace
         run: Remove-Item -Recurse -Force target,dist -ErrorAction SilentlyContinue
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
       - name: Install maturin
-        run: pip install maturin==1.9.2
-
+        run: pip install "maturin>=1.5,<2.0"
       - name: Build wheel
         run: |
           $env:RUSTFLAGS="-C target-feature=+crt-static"
           maturin build --release --interpreter python --out target/wheels
-
       - uses: actions/upload-artifact@v4
         with:
           name: wheels-windows-py${{ matrix.python-version }}
           path: target/wheels/*.whl
 
+
   publish:
     needs: [build-linux, build-macos, build-windows]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
+    permissions:
+      id-token: write # 启用可信发布
     steps:
       - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
@@ -102,22 +106,21 @@ jobs:
           path: dist
           pattern: wheels-*
           merge-multiple: true
-      - name: Prepare final distribution
+      - name: Prepare and Validate
         run: |
           mkdir -p final_dist
           find dist -name "*.whl" -exec cp {} final_dist/ \;
-      - name: Validate wheels
-        run: |
-          pip install twine wheel
-          for whl in final_dist/*.whl; do
-            python -m wheel unpack "$whl" --dest test_unpack || exit 1
-            rm -rf test_unpack
-          done
+          echo "--- Final files for publishing: ---"
+          ls -l final_dist/
+          pip install twine
+          echo "--- Running twine check: ---"
           twine check final_dist/*.whl
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
+          # 修正输入项名称
           skip-existing: true
           packages-dir: final_dist
+          # 强烈建议使用可信发布，在PyPI上配置后即可删除下面的 password 和 user
+          user: __token__
+          password: ${{ secrets.PYPI_API_TOKEN }}
