--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -152,6 +152,7 @@ jobs:
         shell: pwsh
         run: |
           Remove-Item -Recurse -Force target, dist, final_dist -ErrorAction Ignore
+          New-Item -ItemType Directory -Path target/wheels
 
       - name: Install maturin
         run: |
@@ -175,7 +176,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/download-artifact@v4
+      - name: Download all wheels
+        uses: actions/download-artifact@v4
         with:
           path: dist
           pattern: wheels-*
@@ -190,7 +192,6 @@ jobs:
         shell: bash
         run: |
           mkdir -p final_dist
-          # 用 find 避免 ** 不展开问题
           find dist -type f -name "*.whl" -exec cp {} final_dist/ \;
           echo "=== final_dist 内容 ==="
           ls -lh final_dist
@@ -206,6 +207,6 @@ jobs:
         with:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
-          skip_existing: true
+          skip-existing: true
+          packages-dir: final_dist
           verbose: true
-          packages_dir: final_dist
