--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -168,7 +168,7 @@ jobs:
       - name: Upload Windows wheels for debugging
         uses: actions/upload-artifact@v4
         with:
-          name: debug-wheels
+          name: wheels-windows-py${{ matrix.python-version }}
           path: target/wheels/*.whl
           overwrite: true
 
