--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = [ "maturin==1.9.2",]
+requires = [ "maturin>=1.9.2",]
 build-backend = "maturin"
 
 [project]
 name = "rusty-req"
-version = "0.3.56"
+version = "0.3.57"
 description = "⚡ High-performance async HTTP client in Rust with Python bindings for blazing-fast batch requests."
 readme = "README.md"
 requires-python = ">=3.9"
