--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,15 +106,18 @@ jobs:
 
       - name: Build x86_64 wheel
         run: |
+          PYTHON_BIN=$(which python)
           mkdir -p target/wheels/x86_64
-          maturin build --release --target x86_64-apple-darwin --interpreter python${{ matrix.python-version }}
+          maturin build --release --target x86_64-apple-darwin --interpreter $PYTHON_BIN
           mv target/wheels/*.whl target/wheels/x86_64/
 
       - name: Build aarch64 wheel
         run: |
+          PYTHON_BIN=$(which python)
           mkdir -p target/wheels/aarch64
-          maturin build --release --target aarch64-apple-darwin --interpreter python${{ matrix.python-version }}
+          maturin build --release --target aarch64-apple-darwin --interpreter $PYTHON_BIN
           mv target/wheels/*.whl target/wheels/aarch64/
+
       - uses: actions/upload-artifact@v4
         with:
           name: wheels-macos-py${{ matrix.python-version }}
