--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,37 +106,28 @@ jobs:
 
       - name: Build x86_64 wheel
         run: |
-          PYTHON_BIN=$(which python)
           mkdir -p target/wheels/x86_64
-          maturin build --release --target x86_64-apple-darwin --interpreter $PYTHON_BIN
+          maturin build --release --target x86_64-apple-darwin --interpreter python${{ matrix.python-version }}
           mv target/wheels/*.whl target/wheels/x86_64/
 
       - name: Build aarch64 wheel
         run: |
-          PYTHON_BIN=$(which python)
           mkdir -p target/wheels/aarch64
-          maturin build --release --target aarch64-apple-darwin --interpreter $PYTHON_BIN
+          maturin build --release --target aarch64-apple-darwin --interpreter python${{ matrix.python-version }}
           mv target/wheels/*.whl target/wheels/aarch64/
-
+      - name: Create universal2 wheel
+        run: |
+          pip install delocate
+          mkdir -p target/wheels/universal
+          delocate-merge \
+            -w target/wheels/universal \
+            target/wheels/x86_64/*.whl \
+            target/wheels/aarch64/*.whl
+          mv target/wheels/universal/*.whl target/wheels/
       - uses: actions/upload-artifact@v4
         with:
           name: wheels-macos-py${{ matrix.python-version }}
-          path: |
-            target/wheels/x86_64/*.whl
-            target/wheels/aarch64/*.whl
-#      - name: Create universal2 wheel
-#        run: |
-#          pip install delocate
-#          mkdir -p target/wheels/universal
-#          delocate-merge \
-#            -w target/wheels/universal \
-#            target/wheels/x86_64/*.whl \
-#            target/wheels/aarch64/*.whl
-#          mv target/wheels/universal/*.whl target/wheels/
-#      - uses: actions/upload-artifact@v4
-#        with:
-#          name: wheels-macos-py${{ matrix.python-version }}
-#          path: target/wheels/*.whl
+          path: target/wheels/*.whl
 
   build-windows:
     runs-on: windows-latest
