--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rusty-req"
-version = "0.3.71"
+version = "0.3.72"
 edition = "2021"
 license = "MIT"
 
@@ -13,7 +13,7 @@ url = "2.5.4"
 
 [dependencies.pyo3]
 version = "0.20"
-features = [ "extension-module", "abi3-py37",]
+features = [ "extension-module", "abi3-py37", "auto-initialize",]
 
 [dependencies.pyo3-asyncio]
 version = "0.20"
