--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rusty-req"
-version = "0.3.83"
+version = "0.3.84"
 edition = "2021"
 license = "MIT"
 
@@ -25,7 +25,7 @@ features = [ "full",]
 
 [dependencies.reqwest]
 version = "0.11"
-features = [ "json", "brotli", "gzip", "deflate", "stream",]
+features = [ "json", "brotli", "gzip", "deflate", "stream", "native-tls",]
 
 [package.metadata.maturin]
 supported-python-versions = [ "3.9", "3.10", "3.11", "3.12", "3.13",]
